[package]
name = "birch"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/DenisKolodin/birch"
homepage = "https://github.com/DenisKolodin/birch"
documentation = "https://docs.rs/birch/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript"]
categories = ["gui", "wasm", "web-programming"]
description = "A framework for making client-side single-page apps"

[dependencies]
